src/styles.scss
@import "./app/variables.scss";

:root {
  --color-gray-1: #{$gray1};
  --color-gray-2: #{$gray2};
  --color-blue-1: #{$blue1};
  --color-white-1: #{$white1};
}

@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Yaldevi:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");

body {
  margin: 0;
}

html {
  overflow-y: scroll;
  height: fit-content;
  font-family: Yaldevi;
}

html,
body {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  color: var(--color-blue-1);
}
*,
*:before,
*:after {
  box-sizing: inherit;
  transition: 0.1s;
}

//SCROLLBAR

/* width */
::-webkit-scrollbar {
  width: 10px;

  @media #{$mobile} {
    display: none;
  }
}

/* Track */
::-webkit-scrollbar-track {
  background: var(--color-white-1);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--color-gray-1);
}

